feat: Initial Laravel template setup with Docker, Make, and development tools

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,105 +1,65 @@
-FROM composer:2 as vendor
+FROM php:8.2-fpm
 
-WORKDIR /app
+# Arguments defined in docker-compose.yml
+ARG user
+ARG uid
 
-COPY database/ database/
-COPY composer.json composer.json
-COPY composer.lock composer.lock
+# Set working environment
+ENV LANG C.UTF-8
+ENV LC_ALL C.UTF-8
 
-RUN composer install \
-    --ignore-platform-reqs \
-    --no-interaction \
-    --no-plugins \
-    --no-scripts \
-    --prefer-dist
-
-
-FROM php:8.3-fpm-alpine AS app
-
-ARG APP_ENV=production
-
-RUN apk add --no-cache \
-    # build-base and libtool are needed for pecl extensions
-    build-base \
-    libtool \
-    # mcrypt is deprecated but some projects might still use it
-    # libmcrypt-dev \
-    # Common PHP extensions
-    icu-dev \
+# Install system dependencies and PHP extensions
+RUN apt-get update && apt-get install -y \
+    git \
+    curl \
+    libpng-dev \
+    libonig-dev \
     libxml2-dev \
-    libzip-dev \
-    oniguruma-dev \
-    sqlite-dev \
-    # For PostgreSQL
-    postgresql-dev \
-    # For MySQL
-    # mysql-client \
-    # For Redis
-    hiredis \
-    && docker-php-ext-install \
-    bcmath \
-    ctype \
-    # dba \
-    dom \
-    exif \
-    gd \
-    iconv \
-    intl \
-    # ldap \
-    # mbstring \
-    mysqli \
-    opcache \
-    pcntl \
-    pdo \
-    pdo_mysql \
-    pdo_pgsql \
-    pdo_sqlite \
-    # phar \
-    posix \
-    # soap \
-    sockets \
-    # sodium \
-    # sysvmsg \
-    # sysvsem \
-    # sysvshm \
-    # tokenizer \
-    xml \
-    # xmlreader \
-    # xmlrpc \
-    # xmlwriter \
-    # xsl \
     zip \
+    unzip \
+    libzip-dev \
+    libpq-dev \
+    supervisor \
+    cron \
+    libmemcached-dev \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* \
+    && docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip opcache xml \
     && pecl install redis \
-    && docker-php-ext-enable redis
+    && pecl install memcached \
+    && docker-php-ext-enable redis memcached
 
-# If you are using a different user for your application,
-# make sure to change the user and group here
-RUN addgroup -g 1000 -S laravel && \
-    adduser -u 1000 -S laravel -G laravel
+# Install Node.js and npm
+RUN curl -fsSL https://deb.nodesource.com/setup_lts.x | bash - \
+    && apt-get install -y nodejs \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /var/www/html
+# Get latest Composer
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-COPY --from=vendor /app/vendor/ /var/www/html/vendor/
-COPY . /var/www/html/
+# Create system user
+RUN useradd -G www-data,root -u $uid -d /home/$user $user
+RUN mkdir -p /home/$user/.composer && \
+    chown -R $user:$user /home/$user
 
-RUN chown -R laravel:laravel /var/www/html && \
-    chmod -R 755 /var/www/html/storage && \
-    # Fix permissions for writable directories
-    # These directories need to be writable by the web server
-    chown -R laravel:laravel /var/www/html/storage /var/www/html/bootstrap/cache && \
-    chmod -R ug+w /var/www/html/storage /var/www/html/bootstrap/cache && \
-    # Remove unnecessary files from the image
-    rm -rf /var/www/html/tests && \
-    # Optimize autoloader
-    composer dump-autoload --optimize --no-dev --classmap-authoritative && \
-    # Clear caches
-    php artisan optimize:clear && \
-    php artisan config:cache && \
-    php artisan route:cache && \
-    php artisan view:cache
+# Set working directory
+WORKDIR /var/www
 
-USER laravel
+# Copy existing application directory contents
+COPY . /var/www
+
+# Set permissions
+RUN chown -R $user:$user /var/www/storage /var/www/bootstrap/cache && \
+    chmod -R 775 /var/www/storage /var/www/bootstrap/cache
+
+# Copy supervisor configuration
+COPY supervisor/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+
+# Copy cron configuration
+COPY cron/laravel-scheduler /etc/cron.d/laravel-scheduler
+RUN chmod 0644 /etc/cron.d/laravel-scheduler && \
+    crontab /etc/cron.d/laravel-scheduler
 
 EXPOSE 9000
-
-CMD ["php-fpm"]
+CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
