--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,33 @@
-version: '3.8'
-
 services:
   # PHP Application
   app:
     build:
       context: .
       dockerfile: docker/Dockerfile
+      args:
+        user: '${WWWUSER:-sail}'
+        uid: '${WWWUID:-1000}'
     container_name: laravel_app
     restart: unless-stopped
-    tty: true
     environment:
-      SERVICE_NAME: app
-      SERVICE_TAGS: dev
-    working_dir: /var/www/html
+      - DB_HOST=db
+      - REDIS_HOST=redis
+      - MEMCACHED_HOST=memcached
+    working_dir: /var/www
     volumes:
-      - ./:/var/www/html
-      - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
+      - ./:/var/www
     networks:
       - app-network
-    depends_on:
-      - db
-      - redis
 
   # Nginx Web Server
   nginx:
     image: nginx:alpine
     container_name: laravel_nginx
     restart: unless-stopped
-    tty: true
     ports:
-      - "80:80"
-      - "443:443"
+      - "8080:80"
     volumes:
-      - ./:/var/www/html
+      - ./:/var/www
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - app-network
@@ -44,9 +39,6 @@ services:
     image: mysql:8.0
     container_name: laravel_db
     restart: unless-stopped
-    tty: true
-    ports:
-      - "3306:3306"
     environment:
       MYSQL_DATABASE: ${DB_DATABASE}
       MYSQL_USER: ${DB_USERNAME}
@@ -54,12 +46,12 @@ services:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
     volumes:
       - dbdata:/var/lib/mysql
-      # You can add your custom MySQL configuration here
-      # - ./docker/mysql/my.cnf:/etc/mysql/my.cnf
+    ports:
+      - "3306:3306"
     networks:
       - app-network
 
-  # Redis
+  # Redis for Queue
   redis:
     image: redis:alpine
     container_name: laravel_redis
@@ -69,12 +61,20 @@ services:
     networks:
       - app-network
 
-# Docker Networks
+  # Memcached for Cache
+  memcached:
+    image: memcached:alpine
+    container_name: laravel_memcached
+    restart: unless-stopped
+    ports:
+      - "11211:11211"
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
 
-# Docker Volumes
 volumes:
   dbdata:
     driver: local
